# binary-table-format

./: .gitignore  CMakeLists.txt  README.md
include/btable/: btable.h
test/: main.cpp
